Fix padding/display on mobile

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -89,12 +89,20 @@
   padding: 5px;
 }
 
+button.show-things-map {
+  display: none;
+}
+
 #map {
   position: absolute;
   top: 0;
   right: 0;
   left: 0;
   bottom: 0;
+}
+
+#things-list > ul {
+  padding-bottom: 3em;
 }
 
 .pulse-icon {
